Remove warnings, Spartanizer tip and irrelevant comments
Signed-off-by: noam yefet <noamyft@gmail.com>